# componentlib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  struktur.txt
componentlib/: MANIFEST.in  __init__.py  apps.py  htmx_router.py  setup.py  urls.py  views.py
componentlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
componentlib/components/: base.py
componentlib/components/bootstrap_table_list/: README.md  example.json  metadata.yaml  props.py  template.html
componentlib/components/button/: README.md  component.py  example.html  example.json  metadata.yaml  template.html
componentlib/components/dropdown/: README.md  component.py  example.json  metadata.yaml  props.py  template.html  view.py
componentlib/components/formset_table/: README.md  component.py  example.html  example.json  metadata.yaml  props.py  template.html  types.py
componentlib/components/language_dropdown/: README.md  component.py  example.json  metadata.yaml  props.py  template.html
componentlib/components/modal/: README.md  example.json  metadata.yaml  props.py  template.html
componentlib/components/product_card/: README.md  component.py  example.html  example.json  (+2 more)
componentlib/helpers/: case_utils.py  codegen.py  component_import_hint_html.py  component_loader.py  component_utils.py  filters.py  htmx_detect.py  preview.py  registry.py  render.py  template_generator.py
componentlib/templatetags/: component_tags.py  custom_filters.py
demo_project/: settings.py  urls.py
project/: settings.py  urls.py
scripts/: watch_components.py
(+81 files in other folders)
