[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "componentlib"
version = "0.8.0"
description = "A Django component library"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Johanne R. W."}
]
dependencies = [
  "Django>=4.2",
  "pyyaml",
  "rapidfuzz>=3.13.0",
  "watchdog>=6.0.0",
  "pydantic>=2.11.4",
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/johanneRW/componentlib.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["componentlib*"]

[tool.setuptools.package-data]
componentlib = ["components/*", "templates/*", "static/*"]
